// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar Component > props.content works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`Avatar Component > props.default works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <span
      class="custom-node"
    >
      TNode
    </span>
  </span>
</div>
`;

exports[`Avatar Component > props.shape is equal to circle 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar Component > props.shape is equal to round 1`] = `
<div
  class="t-avatar t-avatar--round"
>
  <span>
    <!---->
  </span>
</div>
`;

exports[`Avatar Component > slots.content works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`Avatar Component > slots.default works fine 1`] = `
<div
  class="t-avatar t-avatar--circle"
>
  <span>
    
    <span
      class="custom-node"
    >
      TNode
    </span>
    
  </span>
</div>
`;

exports[`AvatarGroup > :props > :placement 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-right"
    placement="bottom"
  >
    
    
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
        W
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
        W
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle t-avatar__collapse"
    >
      <span>
        
        +1
        
      </span>
    </div>
    
    
  </div>
</div>
`;

exports[`AvatarGroup > :props > :popupProps 1`] = `
<div>
  <div
    class="t-avatar-group t-avatar--offset-right"
  >
    
    
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
        W
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
    >
      <span>
        
        W
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle t-avatar__collapse"
    >
      <span>
        
        +1
        
      </span>
    </div>
    
    
  </div>
</div>
`;

exports[`AvatarGroup Component > props.cascading is equal to left-up 1`] = `
<div
  class="t-avatar-group t-avatar--offset-left"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup Component > props.cascading is equal to right-up 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  <!---->
  
</div>
`;

exports[`AvatarGroup Component > props.collapseAvatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      <span
        class="custom-node"
      >
        TNode
      </span>
      
    </span>
  </div>
  
  
</div>
`;

exports[`AvatarGroup Component > slots.collapse-avatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
  v-slots="[object Object]"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
</div>
`;

exports[`AvatarGroup Component > slots.collapseAvatar works fine 1`] = `
<div
  class="t-avatar-group t-avatar--offset-right"
  v-slots="[object Object]"
>
  
  
  <div
    class="t-avatar t-avatar--circle"
  >
    <div
      class="t-image__wrapper t-image__wrapper--shape-square"
      fallback=""
      referrerpolicy="strict-origin-when-cross-origin"
    >
      <!---->
      <!---->
      <!---->
      <img
        alt=""
        class="t-image t-image--fit-fill t-image--position-center"
        referrerpolicy="strict-origin-when-cross-origin"
        src="https://tdesign.gtimg.com/site/avatar.jpg"
      />
      <div
        class="t-image__loading"
      >
        <div
          class="t-space t-space-align-center t-space-vertical"
          style="gap: 8px;"
        >
          
          
          <div
            class="t-space-item"
          >
            <svg
              class="t-icon t-icon-image"
              fill="none"
              height="1em"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M2 2H22V22H2V2ZM4 20H17.5858L9 11.4142L4 16.4142V20ZM20 19.5858V4H4V13.5858L9 8.58579L20 19.5858ZM15.5469 7C14.9946 7 14.5469 7.44772 14.5469 8C14.5469 8.55228 14.9946 9 15.5469 9C16.0992 9 16.5469 8.55228 16.5469 8C16.5469 7.44772 16.0992 7 15.5469 7ZM12.5469 8C12.5469 6.34315 13.89 5 15.5469 5C17.2037 5 18.5469 6.34315 18.5469 8C18.5469 9.65685 17.2037 11 15.5469 11C13.89 11 12.5469 9.65685 12.5469 8Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <!---->
          
          
          <div
            class="t-space-item"
          >
            图片加载中
          </div>
          <!---->
          
          
        </div>
      </div>
      <!---->
      <!---->
    </div>
  </div>
  <div
    class="t-avatar t-avatar--circle"
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
  >
    
    <i
      class="custom-node"
    />
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__collapse"
  >
    <span>
      
      +2
      
    </span>
  </div>
  
  
</div>
`;
